--- a/source/form.html
+++ b/source/form.html
@@ -112,17 +112,17 @@
               <span class="feedback__obligatory-mark">* - обязательные поля</span>
             </div>
           </form>
-          <div class="form__popup error-window">
-            <h2 class="error-window__title">Что-то пошло не так!</h2>
-            <p class="error-window__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-            <button class="error-window__button blue-button" type="button">ОК</button>
-          </div>
-          <div class="form__popup success-window">
-            <h2 class="success-window__title">Ваш отзыв отправлен!</h2>
-            <p class="success-window__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. <br> В ближайшее время мы опубликуем его на сайте.</p>
-            <button class="success-window__button blue-button" type="button">Закрыть окно</button>
-          </div>
         </section>
+        <div class="error-window">
+          <h2 class="error-window__title">Что-то пошло не так!</h2>
+          <p class="error-window__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+          <button class="error-window__button blue-button" type="button">ОК</button>
+        </div>
+        <div class="success-window">
+          <h2 class="success-window__title">Ваш отзыв отправлен!</h2>
+          <p class="success-window__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. <br> В ближайшее время мы опубликуем его на сайте.</p>
+          <button class="success-window__button blue-button" type="button">Закрыть окно</button>
+        </div>
       </main>
       <footer class="page-footer">
         <section class="contacts">
