--- a/source/gallery.html
+++ b/source/gallery.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link href="css/style.css" rel="stylesheet">
+    <link rel="preload" href="/fonts/ptsans.woff2" as="font">
+    <link rel="preload" href="/fonts/ptsans.woff" as="font">
+    <link rel="preload" href="/fonts/ptsansbold.woff2" as="font">
+    <link rel="preload" href="/fonts/ptsansbold.woff" as="font">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="keywords" content="">
     <meta name="description" content="">
