--- a/source/gallery.html
+++ b/source/gallery.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
     <link rel="preload" href="/fonts/ptsans.woff2" as="font">
     <link rel="preload" href="/fonts/ptsans.woff" as="font">
     <link rel="preload" href="/fonts/ptsansbold.woff2" as="font">
@@ -184,6 +184,6 @@
         </section>
       </footer>
     </div>
-    <script src="js/picturefill.js"></script>
+    <script src="js/picturefill.min.js"></script>
   </body>
 </html>
