--- a/source/index.html
+++ b/source/index.html
@@ -49,7 +49,7 @@
               <div class="reasons-list__bg-blue-wrapper columns__item-33">
                 <h2 class="reasons-list__bg-blue-title">Настоящий <span class="reasons-list__new-line--desctop">городок</span></h2>
                 <span class="reasons-list__bg-blue-number">-№1-</span>
-                <p class="reasons-list__bg-blue-description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+                <p class="reasons-list__bg-blue-description">СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ,<span class="reasons-list__new-line--desctop"> ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</span></p>
               </div>
               <picture class="reasons-list__pic reasons-list__pic--hotel columns__item-66">
                 <source type="image/webp" media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.webp 1x, img/main-city-desktop@2x.webp 2x">
@@ -57,7 +57,7 @@
                 <source type="image/webp" srcset="img/main-city-mobile@1x.webp 1x, img/main-city-mobile@2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg 1x, img/main-city-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg 1x, img/main-city-tablet@2x.jpg 2x">
-                <img class="reasons-list__img" src="img/main-city-mobile@1x.jpg" srcset="img/main-city-mobile@2x.jpg 2x" alt="отель">
+                <img class="reasons-list__img reasons-list__img--hotel" src="img/main-city-mobile@1x.jpg" srcset="img/main-city-mobile@2x.jpg 2x" alt="отель">
               </picture>
             </li>
             <li class="reasons-list__item reasons-list__item--add-info reasons-list__add-info--motel columns__item-33">
@@ -93,7 +93,7 @@
                 <source type="image/webp" srcset="img/main-bridge-mobile@1x.webp 1x, img/main-bridge-mobile@2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg 1x, img/main-bridge-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg 1x, img/main-bridge-tablet@2x.jpg 2x">
-                <img class="reasons-list__img" src="img/main-bridge-mobile@1x.jpg" srcset="img/main-bridge-mobile@2x.jpg 2x" alt="мост дьявола">
+                <img class="reasons-list__img  reasons-list__img--bridge" src="img/main-bridge-mobile@1x.jpg" srcset="img/main-bridge-mobile@2x.jpg 2x" alt="мост дьявола">
               </picture>
             </li>
             <li class="reasons-list__item reasons-list__item--bg-grey columns__item-33">
